# StimGenApp

./: CMakeLists.txt  README.md  main.cpp
App/: StimGenApp.cpp  StimGenApp.h
Interface/: CircleControls.cpp  CircleControls.h  CircleControls.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ObjectControlsWidget.cpp  ObjectControlsWidget.h  RectangleControls.cpp  RectangleControls.h  RectangleControls.ui  RenderWidget.cpp  RenderWidget.h  StimulusBank.cpp  StimulusBank.h  StimulusDisplayWidget.cpp  StimulusDisplayWidget.h  StimulusObjectList.cpp  StimulusObjectList.h
Stimulus/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  StimulusObject.cpp  StimulusObject.h
